# Onboard-SDK

./: CMakeLists.txt
osdk-core/: CMakeLists.txt
osdk-core/api/inc/: dji_vehicle.hpp
osdk-core/api/src/: dji_mobile_communication.cpp  dji_subscription.cpp
osdk-core/platform/linux/inc/: linux_serial_device.hpp  posix_thread.hpp
sample/linux/: CMakeLists.txt
